Fixing qr type selector overflow

--- a/src/components/home/sections/generate-qr-section/form/genereate-qr-form.module.css
+++ b/src/components/home/sections/generate-qr-section/form/genereate-qr-form.module.css
@@ -20,6 +20,7 @@
     padding: 8px;
     width: 100%;
     gap: 12px;
+    overflow: scroll;
 }
 
 .selector button {
